--- a/templates/home.html
+++ b/templates/home.html
@@ -456,7 +456,7 @@
         </div>
 
         <!-- Form -->
-        <form method="get" action="/home" class="p-5 space-y-5 overflow-y-auto">
+        <form id="filterModalForm" method="get" action="/home" class="p-5 space-y-5 overflow-y-auto">
             <!-- Search Input -->
             <div class="relative">
                 <label for="filter_search" class="sr-only">Từ khoá</label>
